# gs-data-ingestion-airflow-poc

./: README.md  docker-compose.yaml  samplevrt.xml
ingestor/app/airflow_client/: README.md  pyproject.toml
ingestor/app/airflow_client/airflow_api_stable_client/: __init__.py
ingestor/app/airflow_client/airflow_api_stable_client/api/config/: get_config.py  get_value.py
ingestor/app/airflow_client/airflow_api_stable_client/api/connection/: delete_connection.py  get_connection.py  get_connections.py  patch_connection.py  post_connection.py  test_connection.py
ingestor/app/airflow_client/airflow_api_stable_client/api/dag/: delete_dag.py  (+11 more)
ingestor/app/airflow_client/airflow_api_stable_client/models/: __init__.py  action.py  action_collection.py  action_resource.py  action_resource_action.py  action_resource_resource.py  basic_dag_run.py  class_reference.py  clear_dag_run.py  clear_task_instances.py  collection_info.py  config.py  config_option.py  config_section.py  connection.py  connection_collection.py  connection_collection_item.py  connection_test.py  create_dataset_event.py  create_dataset_event_extra_type_0.py  cron_expression_type_0.py  dag.py  dag_collection.py  dag_detail.py  dag_detail_dataset_expression_type_0.py  dag_detail_params.py  dag_processor_status.py  dag_run.py  dag_run_collection.py  dag_run_conf.py  dag_run_run_type.py  dag_schedule_dataset_reference.py  dag_state.py  dag_stats_collection_item.py  dag_stats_collection_schema.py  dag_stats_state_collection_item.py  dag_warning.py  dag_warning_collection.py  dataset.py  dataset_collection.py  (+75 more)
(+80 files in other folders)
